Add menu debounce