@@ -35,6 +35,11 @@ import com.incors.plaf.kunststoff.themes.KunststoffDesktopTheme;
 import javax.swing.*;
 import javax.swing.plaf.*;
 import javax.swing.plaf.metal.*;
+import java.awt.AWTEvent;
+import java.awt.Component;
+import java.awt.Toolkit;
+import java.awt.event.AWTEventListener;
+import java.awt.event.MouseEvent;
 
 import com.incors.plaf.kunststoff.themes.KunststoffPresentationTheme;
 
@@ -51,6 +56,52 @@ public class KunststoffLookAndFeel extends MetalLookAndFeel {
   static {
     System.setProperty("awt.useSystemAAFontSettings", "on");
     System.setProperty("sun.font.fontmanager", "sun.font.FontManager");
+    
+    Toolkit.getDefaultToolkit().addAWTEventListener(new AWTEventListener() {
+      private long lastAllowedPressTime = 0;
+      private Component lastComponent = null;
+      private boolean lastWasConsumed = false;
+
+      @Override
+      public void eventDispatched(AWTEvent event) {
+        if (event instanceof MouseEvent) {
+          MouseEvent me = (MouseEvent) event;
+          Component c = me.getComponent();
+          if (isPopupMenuComponent(c)) {
+            if (me.getID() == MouseEvent.MOUSE_PRESSED) {
+              long currentTime = System.currentTimeMillis();
+              if (c == lastComponent && (currentTime - lastAllowedPressTime) < 600) {
+                me.consume();
+                lastWasConsumed = true;
+                return;
+              }
+              lastAllowedPressTime = currentTime;
+              lastComponent = c;
+              lastWasConsumed = false;
+            } else if (me.getID() == MouseEvent.MOUSE_RELEASED || me.getID() == MouseEvent.MOUSE_CLICKED) {
+              if (c == lastComponent && lastWasConsumed) {
+                me.consume();
+              }
+            }
+          }
+        }
+      }
+
+      /**
+       * Only intercept events on JPopupMenu and JMenu (not JMenuItem or JComboBox)
+       * to avoid consuming mouse presses on combo-box popup lists and menu items,
+       * which causes highlight offset and missed clicks.
+       */
+      private boolean isPopupMenuComponent(Component c) {
+        while (c != null) {
+          if (c instanceof JPopupMenu || c instanceof JMenu) {
+            return true;
+          }
+          c = c.getParent();
+        }
+        return false;
+      }
+    }, AWTEvent.MOUSE_EVENT_MASK);
   }
 
   public KunststoffLookAndFeel() {
@@ -168,7 +219,7 @@ public class KunststoffLookAndFeel extends MetalLookAndFeel {
 
   protected void initComponentDefaults(UIDefaults table) {
     super.initComponentDefaults(table);
-    table.put("SplitPane.dividerSize", new Integer(8)); // will result in only one row of bumps
+    table.put("SplitPane.dividerSize", Integer.valueOf(8)); // will result in only one row of bumps
   }
 
 
